--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,3 +52,43 @@ h1, h2 {
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
+
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url("../images/hero-image.jpg") no-repeat center center;
+}
+
+#hero-image {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+
+#cover-text, #cover-text h2 {
+    transform: scale(1);
+}
+
+@keyframes hero-zoom {
+    from: {
+        transform: scale(1);
+}
+to {
+    transform: scale(1.1);
+}
+}
+
+#cover-text {
+    font-size: 130px;
+    font-family: Oswalt, sans-serif;
+    text-transform: uppercase;
+    width: 300px;
+    height: 200px
+    letter-spacing: 4px;
+    padding-top: 40px
+    padding-left:10px
+    background-color:
+}
